<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="@dimen/screen_padding"
    android:layout_marginEnd="@dimen/screen_padding"
    android:background="@drawable/rect_corner_white"
    android:minWidth="@dimen/dialog_min_width"
    android:orientation="vertical"
    android:padding="@dimen/screen_padding_extra_large">


    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/wrong_credentials"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_header"
        android:visibility="gone"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/component_space_medium"
        android:layout_marginEnd="@dimen/text_margin"
        tools:text="@string/wrong_credentials_description"
        android:textColor="@color/text_gray"
        android:textSize="@dimen/text_size_normal_large" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/component_space_medium">

        <TextView
            android:id="@+id/tvPositiveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/component_space"
            android:layout_marginEnd="@dimen/text_margin"
            android:padding="@dimen/text_padding"
            android:text="@string/ok"
            android:textAllCaps="true"
            android:textColor="@color/text_dialog_button" />

        <TextView
            android:id="@+id/tvNegativeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/component_space"
            android:layout_marginEnd="@dimen/component_space"
            android:layout_toStartOf="@+id/tvPositiveButton"
            android:padding="@dimen/text_padding"
            tools:text="@string/try_again"
            android:textAllCaps="true"
            android:textColor="@color/text_dialog_button"
            android:visibility="gone"
            tools:visibility="visible" />

    </RelativeLayout>


</LinearLayout>