<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true"
        android:background="@color/white">

        <include android:id="@+id/header_layout" layout="@layout/header" />
        <include layout="@layout/internet_connectivity_view" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/screen_padding"
            android:layout_marginEnd="@dimen/screen_padding"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_below="@id/header_layout"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:visibility="visible">

                <TextView
                    android:id="@+id/tvMobileData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:padding="@dimen/text_padding"
                    android:text="@string/mobile_data"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_large" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/swMobileData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:thumb="@drawable/switch_thumb"
                    app:track="@drawable/switch_track_green" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/component_space_extra_large"
                android:orientation="horizontal"
                tools:visibility="visible">

                <TextView
                    android:id="@+id/tvDataRoaming"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:padding="@dimen/text_padding"
                    android:text="@string/data_roaming"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_large" />

                <TextView
                    android:id="@+id/tvwDataRoaming"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvDataRoaming"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="29dp"
                    android:layout_toStartOf="@+id/swDataRoaming"
                    android:paddingStart="@dimen/text_padding"
                    android:paddingEnd="@dimen/text_padding"
                    android:text="@string/miui_warning"
                    android:textSize="@dimen/text_size_normal_small" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/swDataRoaming"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:thumb="@drawable/switch_thumb"
                    app:track="@drawable/switch_track_green" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/component_space_extra_large"
                android:orientation="horizontal"
                tools:visibility="visible">

                <TextView
                    android:id="@+id/tvNotifications"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingStart="@dimen/text_padding"
                    android:paddingEnd="@dimen/text_padding"
                    android:text="@string/notification"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_large" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvNotifications"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="29dp"
                    android:layout_toStartOf="@+id/swNotifications"
                    android:paddingStart="@dimen/text_padding"
                    android:paddingEnd="@dimen/text_padding"
                    android:text="@string/notification_text"
                    android:textSize="@dimen/text_size_normal_small" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/swNotifications"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:thumb="@drawable/switch_thumb"
                    app:track="@drawable/switch_track_green" />

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingStart="@dimen/text_padding"
                android:paddingEnd="@dimen/text_padding"
                android:text="@string/txt_settings_charge_avoid"
                android:textSize="@dimen/text_size_normal_small" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/pbSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"
            tools:visibility="visible" />
    </RelativeLayout>
</layout>