<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:focusableInTouchMode="true"
    tools:context=".activity.ForgottenPasswordActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:foreground="@color/foreground_transparent"
        android:src="@drawable/background"
        android:contentDescription="@string/image_description"/>

    <include layout="@layout/header" />

    <include layout="@layout/internet_connectivity_view" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/apbMain"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/screen_padding_extra_large"
        android:layout_marginEnd="@dimen/screen_padding_extra_large"
        android:orientation="vertical"
        android:theme="@style/EditTextTheme">

        <TextView
            android:id="@+id/tv_new_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/component_gap_large"
            android:text="@string/forgot_password"
            android:textColor="@color/text_blue"
            android:textSize="@dimen/text_size_header2"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingStart="@dimen/text_padding"
            android:paddingEnd="@dimen/text_padding"
            android:text="@string/txt_forgotten_password_description"
            android:textSize="@dimen/text_size_normal_small" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/component_space_huge"
            android:hint="@string/email"
            android:textColorHint="@color/text_blue"
            app:boxStrokeColor="@color/text_blue"
            app:boxBackgroundColor="@color/white">

            <bg.crc.roamingapp.customview.CustomTextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:maxLines="1"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                android:textColor="@color/text_blue"
                android:textColorHighlight="@color/text_blue"
                android:textColorLink="@color/text_blue">

            </bg.crc.roamingapp.customview.CustomTextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btnReset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/component_space_huge"
            android:background="@drawable/reg_blue_corner_button"
            android:minHeight="@dimen/edit_text_height"
            android:text="@string/forgotten_password_send"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_normal_large"
            style="?android:attr/borderlessButtonStyle"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/pbForgottenPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        tools:visibility="visible" />

</RelativeLayout>